--- a/app/src/main/res/layout/activity_detail_ad.xml
+++ b/app/src/main/res/layout/activity_detail_ad.xml
@@ -1,12 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hwanik.water.DetailAd">
+    android:orientation="vertical"
+    tools:context="com.proj.hwanik.water.DetailAd">
+    <include
+        android:id="@+id/toolBar"
+        layout="@layout/tool_bar"/>
     <ImageView
+        android:id="@+id/ad"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/iv"
-        />
-
-</RelativeLayout>
+        android:layout_height="match_parent" />
+        <!--<TextView-->
+            <!--android:id="@+id/title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="30sp"-->
+            <!--android:text="title"/>-->
+        <!--<View-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:layout_marginTop="15dp"-->
+            <!--android:layout_marginBottom="15dp"-->
+            <!--android:background="#958f89" />-->
+        <!--<TextView-->
+            <!--android:id="@+id/content"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="20sp"-->
+            <!--android:text="content"/>-->
+</LinearLayout>
