--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,66 +4,58 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Login">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:text="Save Water"
-        android:textColor="@color/ColorPrimary"
-        android:textSize="50sp"/>
-    <com.rengwuxian.materialedittext.MaterialEditText
+    android:background="@drawable/login_bg1"
+    tools:context="com.proj.hwanik.water.Login">
+    <EditText
         android:id="@+id/userEmail"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="40dp"
+        android:padding="5dp"
+        android:layout_marginTop="170dp"
+        android:layout_marginBottom="10dp"
         android:hint="닉네임을 입력해주세요"
         android:textSize="15sp"
         android:inputType="text"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0072ff"
-        app:met_errorColor="#ddaa00"
-        app:met_textColorHint="#d8d8d8" />
-    <com.rengwuxian.materialedittext.MaterialEditText
+        android:background="@drawable/round_edittext"/>
+    <EditText
         android:id="@+id/userPwd"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
+        android:layout_width="220dp"
+        android:layout_height="40dp"
+        android:padding="5dp"
         android:hint="비밀번호를 입력해주세요"
         android:inputType="textPassword"
         android:textSize="15sp"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0056d3"
-        app:met_errorColor="#ddaa00"
-        app:met_textColorHint="#d8d8d8"
-        android:password="true"/>
+        android:password="true"
+        android:background="@drawable/round_edittext"/>
     <LinearLayout
-        android:layout_width="180dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Button
+        <ImageView
             android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:layout_gravity="left"
-            android:text="로그인" />
-        <Button
+            android:src="@drawable/login" />
+        <ImageView
             android:id="@+id/goToSignUp"
-            android:layout_width="wrap_content"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:text="가입하기"/>
+            android:src="@drawable/signup"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="5dp"
-        android:gravity="right">
+        android:gravity="center">
         <TextView
             android:id="@+id/findMyName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tip"
-            android:textColor="#b8b8b8" />
+            android:textColor="#ffffff" />
     </LinearLayout>
 </LinearLayout>
