--- a/app/src/main/res/layout/activity_qality_of_water.xml
+++ b/app/src/main/res/layout/activity_qality_of_water.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.hwanik.water.QualityOfWater">
+    tools:context="com.proj.hwanik.water.QualityOfWater">
 
     <com.github.mikephil.charting.charts.CombinedChart
         android:id="@+id/chart1"
