--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,123 +2,125 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/signup_bg"
     android:gravity="center"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".SignUp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:text="회원정보등록"
-        android:textColor="#00c0ff"
-        android:textSize="40sp"/>
+    tools:context="com.proj.hwanik.water.SignUp">
     <LinearLayout
-        android:layout_width="180dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
         android:orientation="vertical">
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
-            android:layout_width="180dp"
+            android:layout_width="220dp"
             android:layout_height="wrap_content">
-            <com.rengwuxian.materialedittext.MaterialEditText
+            <EditText
                 android:id="@+id/userEmail"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
+                android:layout_width="220dp"
+                android:layout_height="40dp"
+                android:padding="5dp"
                 android:hint="이메일을 입력해주세요"
                 android:textSize="15sp"
                 android:inputType="textEmailAddress"
-                android:background="@drawable/edittext_bg"
+                android:background="@drawable/round_edittext"
                 android:singleLine="true"
-                android:nextFocusDown="@+id/textView2"
-                app:met_baseColor="#000000"
-                app:met_primaryColor="#0072ff"
-                app:met_textColorHint="#d8d8d8"/>
+                android:nextFocusDown="@+id/textView2" />
         </android.support.design.widget.TextInputLayout>
         <TextView
             android:id="@+id/checkEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_gravity="right"
-            android:textColor="#ff0600"
+            android:textColor="#ffffff"
             android:textSize="16sp"
             android:text="중복확인" />
     </LinearLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_pwd"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content">
-        <com.rengwuxian.materialedittext.MaterialEditText
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp">
+        <EditText
             android:id="@+id/userPwd"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
             android:hint="비밀번호를 입력해주세요"
             android:textSize="15sp"
-            android:background="@drawable/edittext_bg"
+            android:background="@drawable/round_edittext"
             android:singleLine="true"
             android:nextFocusDown="@+id/textView2"
-            app:met_baseColor="#000000"
-            app:met_primaryColor="#0056d3"
-            app:met_textColorHint="#d8d8d8"
             android:password="true"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_nName"
-        android:layout_width="180dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content">
-        <com.rengwuxian.materialedittext.MaterialEditText
+        <EditText
             android:id="@+id/userNickName"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
             android:hint="닉네임을 입력해주세요"
             android:textSize="15sp"
-            android:background="@drawable/edittext_bg"
+            android:background="@drawable/round_edittext"
             android:singleLine="true"
             android:nextFocusDown="@+id/textView2"
             app:met_baseColor="#000000"
             app:met_primaryColor="#0072ff"
             app:met_textColorHint="#d8d8d8"/>
     </android.support.design.widget.TextInputLayout>
+
     <TextView
-        android:id="@+id/userAddress"
-        android:layout_width="180dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:textSize="15sp"
-        android:hint="거주지역을 입력해주세요" />
+        android:textColor="#ffffff"
+        android:text="거주지역을 입력해주세요"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             android:id="@+id/city"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="105dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
             android:text="서울시"
+            android:textColor="#ffffff"
+            android:background="#0d788b"
             android:onClick="choiceCity"/>
         <Button
             android:id="@+id/district"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="105dp"
+            android:layout_height="40dp"
             android:text="강동구"
+            android:textColor="#ffffff"
+            android:background="#0d788b"
             android:onClick="choiceDistrict"/>
     </LinearLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_fNum"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content">
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/userFamilyMember"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:hint="거주인원을 입력해주세요"
-            android:textSize="15sp"
-            app:met_baseColor="#000000"
-            app:met_primaryColor="#0072ff"
-            app:met_textColorHint="#d8d8d8"/>
-    </android.support.design.widget.TextInputLayout>
-    <Button
-        android:id="@+id/btnSignUp"
-        android:layout_width="wrap_content"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="완료" />
+        android:layout_marginTop="5dp">
+        <EditText
+            android:id="@+id/userFamilyMember"
+            android:layout_width="220dp"
+            android:layout_height="40dp"
+            android:background="@drawable/round_edittext"
+            android:padding="5dp"
+            android:hint="거주인원을 입력해주세요"
+            android:textSize="15sp" />
+    </android.support.design.widget.TextInputLayout>
+    <ImageView
+        android:id="@+id/btnSignUp"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/signupbtn" />
 </LinearLayout>
