--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,14 +3,15 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f2f2"
     android:padding="16dp"
     android:gravity="center_vertical">
-    <ImageView
-        android:id="@+id/number"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/n3" />
+    <!--<ImageView-->
+        <!--android:id="@+id/number"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:src="@drawable/n3" />-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
