--- a/app/src/main/res/menu/menu_water_volumeby_month.xml
+++ b/app/src/main/res/menu/menu_water_volumeby_month.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.hwanik.water.WaterVolumebyMonth">
+    tools:context="com.proj.hwanik.water.WaterVolumebyMonth">
     <item
         android:id="@+id/addItem"
         android:orderInCategory="200"
