--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="android:typeface">serif</item>
         <item name="colorPrimary">@color/ColorPrimary</item>
         <item name="colorPrimaryDark">@color/ColorPrimaryDark</item>
+
+        <item name="android:textColorHint">@color/hintNormalColor</item>
+        //Label color in True State And Bar Color False And True State
+        <item name="colorAccent">@color/hintActiveColor1</item>
+        <item name="colorControlNormal">@color/hintActiveColor2</item>
+        <item name="colorControlActivated">@color/hintActiveColor3</item>
     </style>
 
 </resources>
